Specify path for javafx in linux